kubernetes-monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  labels:
    app: homework-service
spec:
  selector:
    app: homework-service
  ports:
    - name: custom-exporter
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: nginx-prometheus-exporter
      protocol: TCP
      port: 9113
      targetPort: 9113
