kubernetes-monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-operator-kube-p-prometheus
              port:
                number: 9090
        - path: /prometheus-exporter
          pathType: Prefix
          backend:
            service:
              name: homework-service
              port:
                number: 9113
        - path: /metrics
          pathType: Prefix
          backend:
            service:
              name: homework-service
              port:
                number: 9113
        - path: /prometheus
          pathType: Prefix
          backend:
           service:
             name: homework-service
             port:
               number: 8000
